fix: 降级 Java 8 兼容——替换 HttpClient/var 等 Java 11+ API
- build.gradle: source/targetCompatibility VERSION_11 -> VERSION_1_8
- NanoLimbo.java: class version 55.0 -> 52.0
- ServerConfig.java: HttpClient -> HttpURLConnection
- TelegramService.java: HttpClient -> HttpURLConnection
- NativeServiceLoader.java: var -> InputStream
- NetService.java: var -> AsymmetricCipherKeyPair